# log4tiny

./: CMakeLists.txt
examples/: example_1.cpp
src/: crc32.hpp  data_stream.hpp  format_checker.hpp  format_parser.hpp  log4tiny.hpp  placeholder_attributes.hpp  type_matcher.hpp  value_decoder.hpp  value_encoder.hpp
src/sink/: ostream_sink.cpp  ostream_sink.hpp
tests/: format_checker_test.cpp  ostream_sink_test.cpp  value_decoder_test.cpp  value_encoder_test.cpp
tests/utils/: span_eq_matcher.hpp
